--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>UI/UX Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti perferendis laboriosam qui eum dignissimos vero amet? Facilis labore doloribus nemo!
             </p>
             <div class="row">
               <div class="col-lg-6">
