--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Web Developer.</h3>
             <p class="fst-italic">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti perferendis laboriosam qui eum dignissimos vero amet? Facilis labore doloribus nemo!
             </p>
