--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       <h1>Myint Myat Bo</h1>
       <p>I'm <span class="typed" data-typed-items="Developer, Freelancer"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="https://discord.com/channels/@me" class="discord"><i class="bx bxl-discord"></i></a>
+        <a href="https://www.facebook.com/myint.m.bo.98" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+        <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
@@ -258,7 +258,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <a href="assets/Myint Myat Bo's Resume.pdf" download="MMB's CV">Download Resume</a>
+          <a href="assets/Myint Myat Bo's Resume.pdf" download="MMB's CV" class="cv">Download Resume</a>
         </div>
 
         <div class="row">
@@ -286,8 +286,7 @@
               <h5>2019 - 2023</h5>
             </div>
             <div class="resume-item">
-              <h4>U TIN HTUN WIN - COMPUTER
-                TRAINING CENTER
+              <h4>U TIN HTUN WIN - COMPUTER TRAINING CENTER
                 </h4>
               <h4>Advanced Excel</h4>
               <h5>May 2019 - Jul 2019
@@ -326,7 +325,6 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
